--- a/VueProjekt/budget-website/package.json
+++ b/VueProjekt/budget-website/package.json
@@ -16,8 +16,10 @@
     "popper.js": "^1.15.0",
     "sass": "^1.20.3",
     "sass-loader": "^7.1.0",
+    "v-calendar": "^1.0.0-beta.14",
     "vue": "^2.6.10",
-    "vue-chartjs": "^3.4.2"
+    "vue-chartjs": "^3.4.2",
+    "vue-i18n": "^8.11.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
