--- a/VueProjekt/budget-website/package.json
+++ b/VueProjekt/budget-website/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
+    "firebase": "^6.2.0",
     "jquery": "^3.4.1",
     "peer": "^0.2.10",
     "popper.js": "^1.15.0",
@@ -19,7 +20,8 @@
     "v-calendar": "^1.0.0-beta.14",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
-    "vue-i18n": "^8.11.2"
+    "vue-i18n": "^8.11.2",
+    "vuefire": "^2.0.0-alpha.24"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
