--- a/VueProjekt/budget-website/package.json
+++ b/VueProjekt/budget-website/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.6.9",
     "firebase": "^6.2.0",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "peer": "^0.2.10",
     "popper.js": "^1.15.0",
     "sass": "^1.20.3",
